--- a/miprimerrepositorio/index.html
+++ b/miprimerrepositorio/index.html
@@ -10,13 +10,19 @@ DOCTYPE <html>
 
 </head>
 <body>
-    <h1> Esta es mi primera web</h1>
+    <header>
+
+    </header>
+    <main> <h1> Esta es mi primera web</h1>
+        <h2> Es el ejemplo perfecto del modulo de git </h2>
     <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
 </body>
 <html>
 <ul> Elemento 1</ul>
 <li> Elemento 2</li>
 <li>Elemento 3</li>
-<li>Elemento 4</li>
+<li>Elemento 4</li> 
+</main>
+       
 
 
